--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "psr-4": {"Appwrite\\Runtimes\\":"src/Runtimes"}
     },
     "require": {
-        "php": ">=7.4",
+        "php": ">=8.0",
         "utopia-php/system": "0.4.*"
     },
     "require-dev": {
@@ -22,5 +22,10 @@
         "utopia-php/cli": "0.11.*",
         "vimeo/psalm": "4.0.1"
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "config": {
+        "platform": {
+            "php": "8.0.0"
+        }
+    }
 }
