--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         {
             "name": "Eldad Fux",
             "email": "eldad@appwrite.io"
+        },
+        {
+            "name": "Torsten Dittmann",
+            "email": "torsten@appwrite.io"
         }
     ],
     "autoload": {
@@ -22,10 +26,5 @@
         "utopia-php/cli": "0.11.*",
         "vimeo/psalm": "4.0.1"
     },
-    "minimum-stability": "dev",
-    "config": {
-        "platform": {
-            "php": "8.0.0"
-        }
-    }
+    "minimum-stability": "dev"
 }
