--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Appwrite repository for Cloud Function runtimes that contains the configurations and tests for all of the Appwrite runtime environments.",
     "type": "library",
     "keywords": ["php","appwrite","runtimes"],
-    "license": "BSD-3",
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Eldad Fux",
