--- a/runtimes/node-15.5/package.json
+++ b/runtimes/node-15.5/package.json
@@ -2,9 +2,9 @@
   "name": "aw-node-runtime",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "pm2 start index.js --no-daemon",
+    "start": "pm2 start server.js --no-daemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
