--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ before_script:
   - composer install --ignore-platform-reqs
 
 script:
-  - vendor/bin/phpunit --configuration phpunit.xml
+  - docker-compose up
   - vendor/bin/psalm --show-info=true
