--- a/runtimes/php-8.0/composer.json
+++ b/runtimes/php-8.0/composer.json
@@ -3,6 +3,17 @@
     "description": "End to end backend server for frontend and mobile apps.",
     "type": "project",
     "license": "BSD-3-Clause",
+    "repositories": [
+        {
+            "type": "path",
+            "url": "/usr/code/",
+            "options": {
+                "versions": {
+                    "user/function": "1.0"
+                }
+            }
+        }
+    ],
     "authors": [
         {
             "name": "Appwrite Team",
@@ -11,7 +22,8 @@
     ],
     "require": {
         "php": ">=8.0.0",
-        "ext-swoole": "*"
+        "ext-swoole": "*",
+        "user/function": "1.0"
     },
     "require-dev": {
         "swoole/ide-helper": "4.6.7",
