--- a/runtimes/node-14.5/Dockerfile
+++ b/runtimes/node-14.5/Dockerfile
@@ -2,11 +2,11 @@ FROM node:14.5-alpine
 
 LABEL maintainer="team@appwrite.io"
 
-RUN mkdir -p /usr/src/app
+RUN mkdir -p /usr/local/src
 
-WORKDIR /usr/src/app
+WORKDIR /usr/local/src
 
-COPY package* /usr/src/app/
+COPY package* /usr/local/src/
 
 RUN npm install pm2 -g
 
@@ -14,7 +14,8 @@ RUN npm ci && npm cache clean --force
 
 COPY . .
 
-RUN ["chmod", "+x", "./launch.sh"]
-CMD ["./launch.sh"]
+RUN ["chmod", "+x", "/usr/local/src/launch.sh"]
+RUN ["chmod", "+x", "/usr/local/src/build.sh"]
+CMD ["/usr/local/src/launch.sh"]
 
 EXPOSE 3000
