Improve Error handling on various runtimes
+ Node Runtime will now return a stacktrace if it is available
+ Python Runtime will now correctly return errors to the executor
+ PHP Runtime now returns a stack trace aswell as the error message
+ Fixed PHP Runtime not correctly building

--- a/runtimes/php-8.0/Dockerfile
+++ b/runtimes/php-8.0/Dockerfile
@@ -63,7 +63,7 @@ COPY composer* /usr/local/src/
 
 # Add Source Code
 COPY ./server.php /usr/local/src/
-COPY /usr/local/src/launch.sh /usr/local/src/
+COPY ./launch.sh /usr/local/src/
 COPY ./build.sh /usr/local/src/
 
 # Enable Extensions
