Continue Work on Dart Runtime
- Removed Julia Runtime for now
+ Continued work on Dart Runtime
+ All tests now work again
+ Added an ubuntu runtime for compiled languages if needed

--- a/runtimes/dart-2.12/Dockerfile
+++ b/runtimes/dart-2.12/Dockerfile
@@ -6,5 +6,6 @@ WORKDIR /usr/local/src
 COPY . /usr/local/src
 
 RUN chmod +x ./build.sh
+RUN chmod +x ./launch.sh
 
 CMD ["tail", "-f", "/dev/null"]
