--- a/runtimes/deno-1.12/Dockerfile
+++ b/runtimes/deno-1.12/Dockerfile
@@ -2,10 +2,18 @@ FROM denoland/deno:alpine-1.12.2
 
 LABEL maintainer="team@appwrite.io"
 
-RUN apk add tar
-
-RUN mkdir /usr/local/src
+RUN mkdir -p /usr/local/src/
 
 WORKDIR /usr/local/src/
 
-ENV DENO_DIR=/usr/local/src/.appwrite
+ENV DENO_DIR=/usr/code/denoCache
+
+RUN deno install -qAf --unstable https://deno.land/x/denon/denon.ts
+
+COPY . .
+
+EXPOSE 3000
+
+RUN ["chmod", "+x", "/usr/local/src/launch.sh"]
+RUN ["chmod", "+x", "/usr/local/src/build.sh"]
+CMD [ "/usr/local/src/launch.sh" ]
