--- a/runtimes/deno-1.12/Dockerfile
+++ b/runtimes/deno-1.12/Dockerfile
@@ -2,6 +2,8 @@ FROM denoland/deno:alpine-1.12.2
 
 LABEL maintainer="team@appwrite.io"
 
+RUN addgroup -S appwrite -g 2000 && adduser -S appwrite -G appwrite -D -u 2001
+
 RUN mkdir -p /usr/local/src/
 
 WORKDIR /usr/local/src/
@@ -12,8 +14,11 @@ RUN deno install -qAf --unstable https://deno.land/x/denon@2.4.8/denon.ts
 
 COPY . .
 
-EXPOSE 3000
-
 RUN ["chmod", "+x", "/usr/local/src/launch.sh"]
 RUN ["chmod", "+x", "/usr/local/src/build.sh"]
+
+USER appwrite
+
+EXPOSE 3000
+
 CMD [ "/usr/local/src/launch.sh" ]
