Make all runtimes rootless

--- a/runtimes/node-15.5/Dockerfile
+++ b/runtimes/node-15.5/Dockerfile
@@ -2,7 +2,12 @@ FROM node:15.5-alpine
 
 LABEL maintainer="team@appwrite.io"
 
-RUN mkdir -p /usr/local/src
+RUN addgroup -S appwrite -g 2000 && adduser -S appwrite -G appwrite -D -u 2001
+
+RUN mkdir -p /usr/local/src/
+RUN mkdir -p /usr/code
+RUN mkdir -p /usr/workspace
+RUN mkdir -p /usr/builtCode
 
 WORKDIR /usr/local/src
 
@@ -18,6 +23,13 @@ COPY . .
 
 RUN ["chmod", "+x", "/usr/local/src/launch.sh"]
 RUN ["chmod", "+x", "/usr/local/src/build.sh"]
-CMD ["/usr/local/src/launch.sh"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/local/src"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/code"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/workspace"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/builtCode"]
+
+USER appwrite
 
 EXPOSE 3000
+
+CMD ["/usr/local/src/launch.sh"]
