--- a/runtimes/php-8.0/Dockerfile
+++ b/runtimes/php-8.0/Dockerfile
@@ -1,8 +1,5 @@
 FROM php:8.0-cli-alpine as step0
 
-ARG DEBUG=false
-ENV DEBUG=$DEBUG
-
 ENV PHP_SWOOLE_VERSION=v4.7.0
 
 RUN \
@@ -53,6 +50,13 @@ RUN \
   && apk del .deps \
   && rm -rf /var/cache/apk/*
 
+RUN addgroup -S appwrite -g 2000 && adduser -S appwrite -G appwrite -D -u 2001
+
+RUN mkdir -p /usr/local/src/
+RUN mkdir -p /usr/code
+RUN mkdir -p /usr/workspace
+RUN mkdir -p /usr/builtCode
+
 WORKDIR /usr/local/src/
 
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
@@ -73,5 +77,11 @@ EXPOSE 3000
 
 RUN ["chmod", "+x", "/usr/local/src/launch.sh"]
 RUN ["chmod", "+x", "/usr/local/src/build.sh"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/local/src"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/code"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/workspace"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/builtCode"]
+
+USER appwrite
 
 CMD [ "/usr/local/src/launch.sh" ]
