--- a/runtimes/deno-1.12/Dockerfile
+++ b/runtimes/deno-1.12/Dockerfile
@@ -5,6 +5,8 @@ LABEL maintainer="team@appwrite.io"
 RUN addgroup -S appwrite -g 2000 && adduser -S appwrite -G appwrite -D -u 2001
 
 RUN mkdir -p /usr/local/src/
+RUN mkdir -p /usr/code
+RUN mkdir -p /usr/workspace
 
 WORKDIR /usr/local/src/
 
@@ -16,6 +18,9 @@ COPY . .
 
 RUN ["chmod", "+x", "/usr/local/src/launch.sh"]
 RUN ["chmod", "+x", "/usr/local/src/build.sh"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/local/src"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/code"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/workspace"]
 
 USER appwrite
 
