--- a/runtimes/deno-1.13/Dockerfile
+++ b/runtimes/deno-1.13/Dockerfile
@@ -2,7 +2,11 @@ FROM denoland/deno:alpine-1.13.2
 
 LABEL maintainer="team@appwrite.io"
 
+RUN addgroup -S appwrite -g 2000 && adduser -S appwrite -G appwrite -D -u 2001
+
 RUN mkdir -p /usr/local/src/
+RUN mkdir -p /usr/code
+RUN mkdir -p /usr/workspace
 
 WORKDIR /usr/local/src/
 
@@ -12,8 +16,14 @@ RUN deno install -qAf --unstable https://deno.land/x/denon@2.4.8/denon.ts
 
 COPY . .
 
-EXPOSE 3000
-
 RUN ["chmod", "+x", "/usr/local/src/launch.sh"]
 RUN ["chmod", "+x", "/usr/local/src/build.sh"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/local/src"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/code"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/workspace"]
+
+USER appwrite
+
+EXPOSE 3000
+
 CMD [ "/usr/local/src/launch.sh" ]
