--- a/runtimes/ruby-3.0/Dockerfile
+++ b/runtimes/ruby-3.0/Dockerfile
@@ -2,7 +2,12 @@ FROM ruby:3.0.2-alpine3.13
 
 LABEL maintainer="team@appwrite.io"
 
+RUN addgroup -S appwrite -g 2000 && adduser -S appwrite -G appwrite -D -u 2001
+
 RUN mkdir -p /usr/local/src/
+RUN mkdir -p /usr/code
+RUN mkdir -p /usr/workspace
+RUN mkdir -p /usr/builtCode
 
 WORKDIR /usr/local/src/
 
@@ -16,4 +21,10 @@ EXPOSE 3000
 
 RUN ["chmod", "+x", "/usr/local/src/launch.sh"]
 RUN ["chmod", "+x", "/usr/local/src/build.sh"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/local/src"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/code"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/workspace"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/builtCode"]
+
+USER appwrite
 CMD [ "/usr/local/src/launch.sh" ]
