--- a/runtimes/dart-2.13/Dockerfile
+++ b/runtimes/dart-2.13/Dockerfile
@@ -8,6 +8,7 @@ RUN groupadd -g 2000 appwrite \
 RUN mkdir -p /usr/local/src/
 RUN mkdir -p /usr/code
 RUN mkdir -p /usr/workspace
+RUN mkdir -p /usr/builtCode
 
 WORKDIR /usr/local/src
 COPY . /usr/local/src
@@ -17,6 +18,7 @@ RUN ["chmod", "+x", "/usr/local/src/build.sh"]
 RUN ["chown", "-R", "appwrite:appwrite", "/usr/local/src"]
 RUN ["chown", "-R", "appwrite:appwrite", "/usr/code"]
 RUN ["chown", "-R", "appwrite:appwrite", "/usr/workspace"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/builtCode"]
 
 USER appwrite
 
