--- a/runtimes/ubuntu-20.04/Dockerfile
+++ b/runtimes/ubuntu-20.04/Dockerfile
@@ -8,7 +8,12 @@ RUN groupadd -g 2000 appwrite \
 COPY ./launch.sh /usr/local/src/
 
 RUN [ "chmod", "+x", "/usr/local/src/launch.sh" ]
+RUN ["mkdir", "-p", "/usr/workspace"]
+RUN ["mkdir", "-p", "/usr/code"]
+
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/workspace"]
 RUN ["chown", "-R", "appwrite:appwrite", "/usr/local/src"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/code"]
 
 EXPOSE 3000
 
