--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -32,24 +32,10 @@ body:
       description: "What did actually happen? Add screenshots, if applicable."
       placeholder: "It actually ..."
   - type: dropdown
-    id: appwrite-version
+    id: php-runtimes-version
     attributes:
-      label: "🎲 Appwrite version"
-      description: "What version of Appwrite are you running?"
-      options:
-        - Version 0.10.x
-        - Version 0.9.x
-        - Version 0.8.x
-        - Version 0.7.x
-        - Version 0.6.x
-        - Different version (specify in environment)
-    validations:
-      required: true
-  - type: dropdown
-    id: appwrite-runtimes-version
-    attributes:
-      label: "🎲 Appwrite Runtimes version"
-      description: "What version of Appwrite Runtimes are you running?"
+      label: "🎲 PHP Runtimes version"
+      description: "What version of PHP Runtimes are you running?"
       options:
         - Version 0.5.x
         - Version 0.4.x
