Fix Tests on MacOS
and add warning for MacOS and Windows

--- a/runtimes/ruby-3.0/Dockerfile
+++ b/runtimes/ruby-3.0/Dockerfile
@@ -25,6 +25,8 @@ RUN ["chown", "-R", "appwrite:appwrite", "/usr/local/src"]
 RUN ["chown", "-R", "appwrite:appwrite", "/usr/code"]
 RUN ["chown", "-R", "appwrite:appwrite", "/usr/workspace"]
 RUN ["chown", "-R", "appwrite:appwrite", "/usr/builtCode"]
+RUN ["chmod", "+w", "/tmp"]
+
 
 USER appwrite
 CMD [ "/usr/local/src/launch.sh" ]
