Improve Node Build Script
+ Update Credits
+ Improve Build Script for Node
+ Add runtime table to readme.md

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
         {
             "name": "Torsten Dittmann",
             "email": "torsten@appwrite.io"
+        },
+        {
+            "name": "Bradley Schofield",
+            "email": "bradley@appwrite.io"
         }
     ],
     "repositories": [
