--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,6 @@ before_script:
   - composer install --ignore-platform-reqs
 
 script:
+  - runtimes/buildLocalOnly.sh
   - docker-compose up
   - vendor/bin/psalm --show-info=true
