--- a/runtimes/dart-2.12/pubspec.yaml
+++ b/runtimes/dart-2.12/pubspec.yaml
@@ -1,8 +1,7 @@
 name: runtime
-description: A simple command-line application.
+description: Runtime Server for Function Execution
 version: 1.0.0
 publish_to: none
-# homepage: https://www.example.com
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -10,8 +9,8 @@ environment:
 dependencies:
   path: ^1.8.0
   alfred: ^0.1.4+5
-  appwrite_function_types:
-    path: ./appwrite_function_types/
+  function_types:
+    path: ./function_types/
   shelf: ^1.2.0
 
 dev_dependencies:
