--- a/runtimes/dart-2.12/pubspec.yaml
+++ b/runtimes/dart-2.12/pubspec.yaml
@@ -1,5 +1,5 @@
 name: runtime
-description: Runtime Server for Function Execution
+description: Runtime server for function execution
 version: 1.0.0
 publish_to: none
 
