--- a/runtimes/ruby-3.1/Dockerfile
+++ b/runtimes/ruby-3.1/Dockerfile
@@ -1,12 +1,32 @@
-FROM ruby:3.1-alpine
+FROM ruby:3.1-alpine3.13
 
 LABEL maintainer="team@appwrite.io"
 
-RUN apk add tar
+RUN addgroup -S appwrite -g 2000 && adduser -S appwrite -G appwrite -D -u 2001
 
-RUN mkdir /usr/local/src
+RUN mkdir -p /usr/local/src/
+RUN mkdir -p /usr/code
+RUN mkdir -p /usr/workspace
+RUN mkdir -p /usr/builtCode
 
 WORKDIR /usr/local/src/
 
-ENV GEM_PATH=/usr/local/src/.appwrite
-ENV GEM_SPEC_CACHE=/usr/local/src/.appwrite/specs
+RUN apk add --update alpine-sdk
+
+RUN gem install bundler
+
+COPY . .
+
+EXPOSE 3000
+
+RUN ["chmod", "+x", "/usr/local/src/launch.sh"]
+RUN ["chmod", "+x", "/usr/local/src/build.sh"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/local/src"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/code"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/workspace"]
+RUN ["chown", "-R", "appwrite:appwrite", "/usr/builtCode"]
+RUN ["chmod", "+w", "/tmp"]
+
+
+USER appwrite
+CMD [ "/usr/local/src/launch.sh" ]
