--- a/runtimes/dart-2.13/Dockerfile
+++ b/runtimes/dart-2.13/Dockerfile
@@ -15,6 +15,7 @@ COPY . /usr/local/src
 
 RUN ["chmod", "+x", "/usr/local/src/launch.sh"]
 RUN ["chmod", "+x", "/usr/local/src/build.sh"]
+RUN ["chmod", "+x", "/usr/local/src/prepare"]
 RUN ["chown", "-R", "appwrite:appwrite", "/usr/local/src"]
 RUN ["chown", "-R", "appwrite:appwrite", "/usr/code"]
 RUN ["chown", "-R", "appwrite:appwrite", "/usr/workspace"]
