ci: use latest docker compose

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,11 @@ before_script:
       echo "${DOCKERHUB_PULL_PASSWORD}" | docker login --username "${DOCKERHUB_PULL_USERNAME}" --password-stdin
     fi
   - docker --version
+  # Install latest Compose
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
   - composer install --ignore-platform-reqs
   - runtimes/buildLocalOnly.sh
 
