ci: use buildkit and compose v2

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,28 +7,38 @@ arch:
   - amd64
   - arm64
 
-services:
-  - docker
-
 notifications:
   email:
     - team@appwrite.io
 
 before_script: 
+  # Install latest Docker
+  - curl -fsSL https://get.docker.com | sh
+  # Enable Buildkit in Docker config
+  - echo '{"experimental":"enabled"}' | sudo tee /etc/docker/daemon.json
+  - mkdir -p $HOME/.docker
+  - echo '{"experimental":"enabled"}' | sudo tee $HOME/.docker/config.json
+  - sudo service docker start
   - >
     if [ ! -z "${DOCKERHUB_PULL_USERNAME:-}" ]; then
       echo "${DOCKERHUB_PULL_PASSWORD}" | docker login --username "${DOCKERHUB_PULL_USERNAME}" --password-stdin
     fi
   - docker --version
   # Install latest Compose
-  - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
+  - mkdir -p ~/.docker/cli-plugins/
+  - curl -SL https://github.com/docker/compose/releases/download/v2.2.3/docker-compose-linux-x86_64 -o ~/.docker/cli-plugins/docker-compose
+  - chmod +x ~/.docker/cli-plugins/docker-compose
+  - docker compose version
+  # Enable Buildkit
+  - docker buildx create --name travis_builder --use
+  - export COMPOSE_INTERACTIVE_NO_CLI
+  - export DOCKER_BUILDKIT=1
+  - export COMPOSE_DOCKER_CLI_BUILD=1
+  - export BUILDKIT_PROGRESS=plain
   - composer install --ignore-platform-reqs
   - runtimes/buildLocalOnly.sh
 
 script:
-  - docker-compose up -d
-  - docker-compose exec tests vendor/bin/phpunit --debug
-  - docker-compose exec tests vendor/bin/psalm --show-info=true
+  - docker compose up -d
+  - docker compose exec tests vendor/bin/phpunit --debug
+  - docker compose exec tests vendor/bin/psalm --show-info=true
