--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,8 @@ before_script:
     fi
   - docker --version
   # Install latest Compose
-  - sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-  - sudo chmod +x /usr/local/bin/docker-compose
-
+  - curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+  - chmod +x /usr/local/bin/docker-compose
   # Enable Buildkit
   - docker buildx create --name travis_builder --use
   - export COMPOSE_INTERACTIVE_NO_CLI
