--- a/runtimes/dart-2.14/dart_runtime_helper/pubspec.yaml
+++ b/runtimes/dart-2.14/dart_runtime_helper/pubspec.yaml
@@ -7,7 +7,6 @@ publish_to: none
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
-dependencies:
-  function_types:
-    git: https://github.com/lohanidamodar/function_types
-  shelf: ^1.2.0
+dependencies: 
+  pubspec: ^2.0.1
+  
