Revert Branch Merge "fix: php runtimes"
This reverts commit 7d0f923b81e9b9d6c64cc73bc9b5bc8ef470874a.

Revert "ci: fix permissions"

This reverts commit 4e470104c4cd9e7f373abe2870425ea14157fa9f.

Revert "ci: fix docker compose"

This reverts commit 68724a2ca533e524cee5b7f3e649f88e7001b8b5.

Revert "fix: docker"

This reverts commit 22cfce07a81ec14613661650c9029dc76533a8e0.

Revert "ci: fix arm compose"

This reverts commit 7ebe913fe5486576ccecb7a82d1507439cf44e04.

Revert "ci: fix compose"

This reverts commit 11eb0edf08c214cca57ca7741aa7851f049886c4.

Revert "revert: compose2 change"

This reverts commit 74ea8d583caee5e7a393257d62d7a05258f4b98b.

Revert "ci: use buildkit and compose v2"

This reverts commit 045a5971348cac45c70f8385e15b88761212cb98.

Revert "ci: use latest docker compose"

This reverts commit c020650c3cf02d553139f62218ea8cae1e558d5e.

Revert "tests: remove ppc support"

This reverts commit b9797d488ce6d964a42505f2ab31f88e512c2b6c.

Revert "tests: fix style"

This reverts commit 22f22cd1a7d90d9dae362d829d5c70846bf01060.

Revert "tests: remove arch from array"

This reverts commit 0b08e76d3a362d3e957a502835be6632ea9345f6.

Revert "fix: allow ci builds to fail"

This reverts commit 97191552d9dc323d864141fe0ccbe38fafd9d089.

Revert "fix: give more verbose errors on tests"

This reverts commit 6fd598377c4f3ae48402cb60e139815d6d1e2695.

Revert "fix: ci on architecture"

This reverts commit 7e9bd6522b46384e7401b9f70282940a36365c1a.

Revert "fix: ci tests execution"

This reverts commit 5a0434bd4dc04b6de0659581d74e1c0268fcda35.

Revert "fix: php runtimes"

This reverts commit e019d3ae7dc8f01b6a2196e5e65364440d4ba4de.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
 
 arch:
   - amd64
+  - ppc64le
   - arm64
 
 services:
@@ -14,17 +15,14 @@ notifications:
   email:
     - team@appwrite.io
 
-before_script:
+before_script: 
   - >
     if [ ! -z "${DOCKERHUB_PULL_USERNAME:-}" ]; then
       echo "${DOCKERHUB_PULL_PASSWORD}" | docker login --username "${DOCKERHUB_PULL_USERNAME}" --password-stdin
     fi
   - docker --version
   - composer install --ignore-platform-reqs
-  - runtimes/buildLocalOnly.sh
-  - mkdir /tmp/builtCode
 
 script:
-  - docker-compose up -d
-  - docker-compose exec tests vendor/bin/phpunit --debug
-  - docker-compose exec tests vendor/bin/psalm --show-info=true
+  - docker-compose up
+  - vendor/bin/psalm --show-info=true
