Fix PHP version to fix builds

--- a/runtimes/php-8.0/Dockerfile
+++ b/runtimes/php-8.0/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.0-cli-alpine as step0
+FROM php:8.0.14-cli-alpine3.15 as step0
 
 ENV PHP_SWOOLE_VERSION=v4.7.0
 
@@ -26,7 +26,7 @@ RUN \
   make && make install && \
   cd ..
 
-FROM php:8.0-cli-alpine as final
+FROM php:8.0.14-cli-alpine3.15 as final
 
 LABEL maintainer="team@appwrite.io"
 
