--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "php": ">=8.0",
         "utopia-php/system": "0.4.*",
-        "utopia-php/orchestration": "0.3.x"
+        "utopia-php/orchestration": "0.4.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3",
