--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "scripts": {
         "lint": "./vendor/bin/pint --test",
         "format": "./vendor/bin/pint",
-        "tests": "vendor/bin/phpunit --configuration phpunit.xml",
+        "test": "vendor/bin/phpunit --configuration phpunit.xml",
         "check": "./vendor/bin/phpstan analyse --level max src tests"
     },
     "autoload": {
